--- a/describe.ipynb
+++ b/describe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "854c1d0a",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "940bb610",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "0e4550e2",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "fcce7bfb",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "5a7578fa",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "fa62a50f",
    "metadata": {},
    "outputs": [
@@ -249,8 +249,57 @@
     "columns_of_interest = filtered_data.iloc[:, 35:46]\n",
     "\n",
     "column_sums = columns_of_interest.sum()\n",
+    "total_sum = column_sums.sum()\n",
+    "\n",
+    "column_percentages = (column_sums / total_sum) * 100\n",
+    "\n",
     "\n",
     "sorted_columns = column_sums.sort_values(ascending=False)\n",
+    "\n",
+    "top_5_columns = sorted_columns.head(5)\n",
+    "\n",
+    "print(top_5_columns)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccfab4f2",
+   "metadata": {},
+   "source": [
+    "# counterparty Percent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5569b1be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CntrprtCrTrkVn     22.309649\n",
+      "CntrprtFxdStnry    22.190431\n",
+      "CntrprtNClsn       20.441901\n",
+      "CntrprtHvyVhcl     16.420283\n",
+      "CntrprtOther        8.694961\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "columns_of_interest = filtered_data.iloc[:, 35:46]\n",
+    "\n",
+    "column_sums = columns_of_interest.sum()\n",
+    "\n",
+    "total_sum = column_sums.sum()\n",
+    "column_percentages = (column_sums / total_sum) * 100\n",
+    "\n",
+    "sorted_columns = column_percentages.sort_values(ascending=False)\n",
     "\n",
     "top_5_columns = sorted_columns.head(5)\n",
     "\n",
@@ -267,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "2d042052",
    "metadata": {},
    "outputs": [
@@ -295,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "722458cf",
    "metadata": {},
    "outputs": [
@@ -323,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "bac12360",
    "metadata": {},
    "outputs": [
@@ -351,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "c98cf1a3",
    "metadata": {},
    "outputs": [
@@ -359,12 +408,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Age4064      2815\n",
-      "Age2639      2636\n",
-      "Age1725      2547\n",
-      "Age75plus    2054\n",
-      "Age6574      2025\n",
-      "dtype: int64\n"
+      "Age4064      22.373232\n",
+      "Age2639      20.950564\n",
+      "Age1725      20.243205\n",
+      "Age75plus    16.324909\n",
+      "Age6574      16.094421\n",
+      "dtype: float64\n"
      ]
     }
    ],
@@ -374,9 +423,17 @@
     "\n",
     "columns_of_interest = filtered_data.iloc[:, 23:30]\n",
     "\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "\n",
     "column_sums = columns_of_interest.sum()\n",
     "\n",
-    "sorted_columns = column_sums.sort_values(ascending=False)\n",
+    "total_sum = column_sums.sum()\n",
+    "column_percentages = (column_sums / total_sum) * 100\n",
+    "\n",
+    "sorted_columns = column_percentages.sort_values(ascending=False)\n",
     "\n",
     "top_5_columns = sorted_columns.head(5)\n",
     "\n",
