--- a/describe.ipynb
+++ b/describe.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccfab4f2",
+   "id": "6fc13517",
    "metadata": {},
    "source": [
     "# counterparty Percent"
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "5569b1be",
+   "id": "c61d687b",
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "dbe1f4d9",
    "metadata": {},
    "outputs": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "id": "267761a6",
    "metadata": {},
    "outputs": [
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "id": "7df8f2b7",
    "metadata": {},
    "outputs": [
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "id": "5b44bc80",
    "metadata": {},
    "outputs": [
@@ -675,6 +675,51 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5670d4ae",
+   "metadata": {},
+   "source": [
+    "# counterparty Percent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "fe133d36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CntrprtCrTrkVn     29.731105\n",
+      "CntrprtFxdStnry    24.921537\n",
+      "CntrprtNClsn       24.064806\n",
+      "CntrprtHvyVhcl     11.061159\n",
+      "CntrprtOther        5.581474\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "columns_of_interest = filtered_data.iloc[:, 35:46]\n",
+    "\n",
+    "column_sums = columns_of_interest.sum()\n",
+    "\n",
+    "total_sum = column_sums.sum()\n",
+    "column_percentages = (column_sums / total_sum) * 100\n",
+    "\n",
+    "sorted_columns = column_percentages.sort_values(ascending=False)\n",
+    "\n",
+    "top_5_columns = sorted_columns.head(5)\n",
+    "\n",
+    "print(top_5_columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "eeb3ab44",
    "metadata": {},
    "source": [
@@ -683,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "id": "62353bdd",
    "metadata": {},
    "outputs": [
@@ -711,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "id": "00e04cc3",
    "metadata": {},
    "outputs": [
@@ -731,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "id": "f2244e45",
    "metadata": {},
    "outputs": [
@@ -747,6 +792,48 @@
     "total_cases = filtered_data['DiedCases'].sum()\n",
     "\n",
     "print(\"Total number of DiedCases:\", total_cases)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "cf7469f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age1725    17.626601\n",
+      "Age4064    16.897107\n",
+      "Age2639    16.430571\n",
+      "Age816     14.827381\n",
+      "Age07      11.748240\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "columns_of_interest = filtered_data.iloc[:, 23:30]\n",
+    "\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "\n",
+    "column_sums = columns_of_interest.sum()\n",
+    "\n",
+    "total_sum = column_sums.sum()\n",
+    "column_percentages = (column_sums / total_sum) * 100\n",
+    "\n",
+    "sorted_columns = column_percentages.sort_values(ascending=False)\n",
+    "\n",
+    "top_5_columns = sorted_columns.head(5)\n",
+    "\n",
+    "print(top_5_columns)"
    ]
   },
   {
@@ -767,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "id": "e2651cdb",
    "metadata": {},
    "outputs": [],
@@ -785,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "id": "1e7b18a7",
    "metadata": {},
    "outputs": [
@@ -833,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "id": "aebd8d1b",
    "metadata": {},
    "outputs": [
@@ -909,6 +996,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "a4b2a573",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CntrprtNClsn       23.416763\n",
+      "CntrprtCrTrkVn     19.310591\n",
+      "CntrprtOther       19.248241\n",
+      "CntrprtFxdStnry    15.142068\n",
+      "Cntrprt23WldMV      8.310323\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "columns_of_interest = filtered_data.iloc[:, 35:46]\n",
+    "\n",
+    "column_sums = columns_of_interest.sum()\n",
+    "\n",
+    "total_sum = column_sums.sum()\n",
+    "column_percentages = (column_sums / total_sum) * 100\n",
+    "\n",
+    "sorted_columns = column_percentages.sort_values(ascending=False)\n",
+    "\n",
+    "top_5_columns = sorted_columns.head(5)\n",
+    "\n",
+    "print(top_5_columns)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "eb38ab29",
    "metadata": {},
@@ -918,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "id": "87febbe9",
    "metadata": {},
    "outputs": [
@@ -946,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "id": "c12f81d6",
    "metadata": {},
    "outputs": [
@@ -966,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "id": "89a94339",
    "metadata": {},
    "outputs": [
@@ -1019,6 +1143,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "71e46577",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age4064    25.385232\n",
+      "Age2639    22.071791\n",
+      "Age1725    21.189988\n",
+      "Age816     13.137971\n",
+      "Age6574    10.510377\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "columns_of_interest = filtered_data.iloc[:, 23:30]\n",
+    "\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "\n",
+    "column_sums = columns_of_interest.sum()\n",
+    "\n",
+    "total_sum = column_sums.sum()\n",
+    "column_percentages = (column_sums / total_sum) * 100\n",
+    "\n",
+    "sorted_columns = column_percentages.sort_values(ascending=False)\n",
+    "\n",
+    "top_5_columns = sorted_columns.head(5)\n",
+    "\n",
+    "print(top_5_columns)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c6abe6db",
    "metadata": {},
@@ -1038,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "id": "620415af",
    "metadata": {},
    "outputs": [],
@@ -1057,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "id": "4aed0813",
    "metadata": {},
    "outputs": [
@@ -1104,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
    "id": "619a43da",
    "metadata": {},
    "outputs": [
@@ -1147,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "id": "11a57fb0",
    "metadata": {},
    "outputs": [
@@ -1173,6 +1339,43 @@
     "column_sums = columns_of_interest.sum()\n",
     "\n",
     "sorted_columns = column_sums.sort_values(ascending=False)\n",
+    "\n",
+    "top_5_columns = sorted_columns.head(5)\n",
+    "\n",
+    "print(top_5_columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "1117b2da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CntrprtNClsn       25.570665\n",
+      "CntrprtOther       22.721386\n",
+      "CntrprtCrTrkVn     19.532135\n",
+      "CntrprtFxdStnry    12.133722\n",
+      "CntrprtPdlC        10.320544\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "columns_of_interest = filtered_data.iloc[:, 35:46]\n",
+    "\n",
+    "column_sums = columns_of_interest.sum()\n",
+    "\n",
+    "total_sum = column_sums.sum()\n",
+    "column_percentages = (column_sums / total_sum) * 100\n",
+    "\n",
+    "sorted_columns = column_percentages.sort_values(ascending=False)\n",
     "\n",
     "top_5_columns = sorted_columns.head(5)\n",
     "\n",
@@ -1307,6 +1510,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "bf8d8870",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age4064    22.964222\n",
+      "Age2639    18.042739\n",
+      "Age816     15.322972\n",
+      "Age1725    14.027845\n",
+      "Age6574    13.768820\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "columns_of_interest = filtered_data.iloc[:, 23:30]\n",
+    "\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "\n",
+    "column_sums = columns_of_interest.sum()\n",
+    "\n",
+    "total_sum = column_sums.sum()\n",
+    "column_percentages = (column_sums / total_sum) * 100\n",
+    "\n",
+    "sorted_columns = column_percentages.sort_values(ascending=False)\n",
+    "\n",
+    "top_5_columns = sorted_columns.head(5)\n",
+    "\n",
+    "print(top_5_columns)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3253c071",
    "metadata": {},
@@ -1324,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 52,
    "id": "f9aa3959",
    "metadata": {},
    "outputs": [],
@@ -1343,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
    "id": "f3c64609",
    "metadata": {},
    "outputs": [
@@ -1390,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "id": "0bc36951",
    "metadata": {},
    "outputs": [
@@ -1433,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 55,
    "id": "f6f0ffcd",
    "metadata": {},
    "outputs": [
@@ -1466,6 +1711,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "6d3a9c43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CntrprtCrTrkVn    55.619454\n",
+      "CntrprtHvyVhcl    14.097930\n",
+      "CntrprtOther      10.384489\n",
+      "Cntrprt23WldMV     7.476175\n",
+      "CntrprtPdlC        6.720342\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "columns_of_interest = filtered_data.iloc[:, 35:46]\n",
+    "\n",
+    "column_sums = columns_of_interest.sum()\n",
+    "\n",
+    "total_sum = column_sums.sum()\n",
+    "column_percentages = (column_sums / total_sum) * 100\n",
+    "\n",
+    "sorted_columns = column_percentages.sort_values(ascending=False)\n",
+    "\n",
+    "top_5_columns = sorted_columns.head(5)\n",
+    "\n",
+    "print(top_5_columns)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a38a436b",
    "metadata": {},
@@ -1475,7 +1757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 57,
    "id": "eff9b0bc",
    "metadata": {},
    "outputs": [
@@ -1503,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 58,
    "id": "9718adc9",
    "metadata": {},
    "outputs": [
@@ -1531,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 59,
    "id": "b27232b9",
    "metadata": {},
    "outputs": [
@@ -1559,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 60,
    "id": "6a090afa",
    "metadata": {},
    "outputs": [
@@ -1593,8 +1875,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "8fff8bc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age4064      20.653960\n",
+      "Age2639      16.825501\n",
+      "Age1725      14.541571\n",
+      "Age75plus    14.344397\n",
+      "Age6574      12.487677\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "columns_of_interest = filtered_data.iloc[:, 23:30]\n",
+    "\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "\n",
+    "column_sums = columns_of_interest.sum()\n",
+    "\n",
+    "total_sum = column_sums.sum()\n",
+    "column_percentages = (column_sums / total_sum) * 100\n",
+    "\n",
+    "sorted_columns = column_percentages.sort_values(ascending=False)\n",
+    "\n",
+    "top_5_columns = sorted_columns.head(5)\n",
+    "\n",
+    "print(top_5_columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9d37e53",
    "metadata": {},
    "outputs": [],
    "source": []
