--- a/smote_ensemble.ipynb
+++ b/smote_ensemble.ipynb
@@ -368,7 +368,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3l/xh28kn0j7_7d5hh7fgz188940000gn/T/ipykernel_2984/2325546250.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/3l/xh28kn0j7_7d5hh7fgz188940000gn/T/ipykernel_3265/2325546250.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "c263d29f",
    "metadata": {},
    "outputs": [],
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "524141d8",
    "metadata": {},
    "outputs": [],
@@ -478,10 +478,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "241d2021",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/sklearn/neural_network/_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.78      0.71      0.74      2013\n",
+      "           1       0.74      0.80      0.77      2066\n",
+      "\n",
+      "    accuracy                           0.76      4079\n",
+      "   macro avg       0.76      0.76      0.76      4079\n",
+      "weighted avg       0.76      0.76      0.76      4079\n",
+      "\n",
+      "Accuracy: 0.7565579798970336\n",
+      "Confusion Matrix:\n",
+      " [[1424  589]\n",
+      " [ 404 1662]]\n",
+      "0.7699791521890202\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier, ExtraTreesClassifier\n",
