--- a/imbalanc classification/imbalancecomparison.ipynb
+++ b/imbalanc classification/imbalancecomparison.ipynb
@@ -257,6 +257,35 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "626b839d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    54038.000000\n",
+       "mean        20.565250\n",
+       "std         32.442537\n",
+       "min          3.000000\n",
+       "25%          3.000000\n",
+       "50%          9.000000\n",
+       "75%         24.000000\n",
+       "max        363.000000\n",
+       "Name: Severity, dtype: float64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['Severity'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "bcdb89d7",
    "metadata": {},
    "outputs": [],
@@ -266,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "736df86d",
    "metadata": {},
    "outputs": [],
@@ -276,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "43803413",
    "metadata": {},
    "outputs": [],
@@ -300,7 +329,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "id": "803ac340",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    54038.000000\n",
+       "mean         0.429198\n",
+       "std          0.596959\n",
+       "min          0.000000\n",
+       "25%          0.000000\n",
+       "50%          0.000000\n",
+       "75%          1.000000\n",
+       "max          2.000000\n",
+       "Name: Bed_days_category, dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_data['Bed_days_category'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3bd6dd88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    54038.000000\n",
+       "mean         2.308944\n",
+       "std          1.125134\n",
+       "min          1.098612\n",
+       "25%          1.098612\n",
+       "50%          2.197225\n",
+       "75%          3.178054\n",
+       "max          5.894403\n",
+       "Name: Severity, dtype: float64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['Severity'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "f552c735",
    "metadata": {},
    "outputs": [
@@ -313,13 +400,77 @@
        "Name: Bed_days_category, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "filtered_data['Bed_days_category'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0c197728",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        2\n",
+       "1        1\n",
+       "2        1\n",
+       "3        2\n",
+       "4        2\n",
+       "        ..\n",
+       "54033    0\n",
+       "54034    0\n",
+       "54035    0\n",
+       "54036    0\n",
+       "54037    0\n",
+       "Name: Bed_days_category, Length: 54038, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_data['Bed_days_category']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3183b2f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "کلاس 0:\n",
+      "بازه: [1.0986122886681098, 2.697209137200357)\n",
+      "کلاس 1:\n",
+      "بازه: [2.697209137200357, 4.295805985732604)\n",
+      "کلاس 2:\n",
+      "بازه: [4.295805985732604, 5.8944028342648505)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "print(\"کلاس 0:\")\n",
+    "print(f\"بازه: [{bins[0]}, {bins[1]})\")\n",
+    "\n",
+    "print(\"کلاس 1:\")\n",
+    "print(f\"بازه: [{bins[1]}, {bins[2]})\")\n",
+    "\n",
+    "print(\"کلاس 2:\")\n",
+    "print(f\"بازه: [{bins[2]}, {bins[3]})\")"
    ]
   },
   {
