--- a/HospitalRegression/RIDGE.ipynb
+++ b/HospitalRegression/RIDGE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1877a1d0",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8ebfede9",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8161e8fc",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "58ad5c39",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "fda495fe",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "07c500b1",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "c0850f0b",
    "metadata": {},
    "outputs": [
@@ -199,41 +199,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "f47e24ed",
+   "execution_count": 10,
+   "id": "6b52d250",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index of Agreement: 0.83\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "def index_of_agreement(y_true, y_pred):\n",
-    "    \"\"\"\n",
-    "    Calculates the Index of Agreement between the true and predicted values.\n",
-    "\n",
-    "    Args:\n",
-    "        y_true (array-like): The true values.\n",
-    "        y_pred (array-like): The predicted values.\n",
-    "\n",
-    "    Returns:\n",
-    "        float: The Index of Agreement.\n",
-    "    \"\"\"\n",
     "    y_true = np.array(y_true)\n",
     "    y_pred = np.array(y_pred)\n",
-    "\n",
-    "    # Check if the arrays have the same shape\n",
+    "    \n",
     "    assert y_true.shape == y_pred.shape, \"Input arrays must have the same shape.\"\n",
-    "\n",
-    "    # Calculate the mean of the true values\n",
+    "    \n",
     "    y_true_mean = np.mean(y_true)\n",
-    "\n",
-    "    # Calculate the numerator and denominator terms\n",
     "    numerator = np.sum(np.square(y_pred - y_true))\n",
     "    denominator = np.sum(np.square(np.abs(y_pred - y_true_mean) + np.abs(y_true - y_true_mean)))\n",
-    "\n",
-    "    # Calculate the Index of Agreement\n",
+    "    \n",
     "    ioa = 1 - (numerator / denominator)\n",
+    "    \n",
+    "    return ioa\n",
     "\n",
-    "    return ioa"
+    "ioa = index_of_agreement(y_test, predicted_counts)\n",
+    "print(f\"Index of Agreement: {ioa:.2f}\")"
    ]
   },
   {
@@ -269,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "c1dc7c1d",
    "metadata": {},
    "outputs": [],
@@ -279,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "89feb52f",
    "metadata": {},
    "outputs": [],
@@ -289,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "59da9e04",
    "metadata": {},
    "outputs": [
@@ -350,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "2f73d88b",
    "metadata": {},
    "outputs": [
@@ -400,6 +394,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "fe9c2e2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index of Agreement: 0.72\n"
+     ]
+    }
+   ],
+   "source": [
+    "def index_of_agreement(y_true, y_pred):\n",
+    "    y_true = np.array(y_true)\n",
+    "    y_pred = np.array(y_pred)\n",
+    "    \n",
+    "    assert y_true.shape == y_pred.shape, \"Input arrays must have the same shape.\"\n",
+    "    \n",
+    "    y_true_mean = np.mean(y_true)\n",
+    "    numerator = np.sum(np.square(y_pred - y_true))\n",
+    "    denominator = np.sum(np.square(np.abs(y_pred - y_true_mean) + np.abs(y_true - y_true_mean)))\n",
+    "    \n",
+    "    ioa = 1 - (numerator / denominator)\n",
+    "    \n",
+    "    return ioa\n",
+    "\n",
+    "ioa = index_of_agreement(y_test, predicted_counts)\n",
+    "print(f\"Index of Agreement: {ioa:.2f}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b39a81a1",
    "metadata": {},
@@ -409,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "21efc9e2",
    "metadata": {},
    "outputs": [],
@@ -420,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "9a9c431d",
    "metadata": {},
    "outputs": [
@@ -481,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "b09cf171",
    "metadata": {},
    "outputs": [
@@ -489,10 +516,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 6.42\n",
-      "MAE: 4.38\n",
-      "R^2: 0.54\n",
-      "Index of Agreement: 0.83\n"
+      "RMSE: 9.01\n",
+      "MAE: 6.14\n",
+      "R^2: 0.48\n",
+      "Index of Agreement: 0.78\n"
      ]
     }
    ],
@@ -504,7 +531,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "# ... (بقیه کد شما) ...\n",
     "\n",
     "ridge_model = Ridge(alpha=1.0, solver='lbfgs', positive=True)\n",
     "ridge_model.fit(x_train, y_train)\n",
@@ -541,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "a52556df",
    "metadata": {},
    "outputs": [
@@ -591,6 +617,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "90260aa9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index of Agreement: 0.80\n"
+     ]
+    }
+   ],
+   "source": [
+    "def index_of_agreement(y_true, y_pred):\n",
+    "    y_true = np.array(y_true)\n",
+    "    y_pred = np.array(y_pred)\n",
+    "    \n",
+    "    assert y_true.shape == y_pred.shape, \"Input arrays must have the same shape.\"\n",
+    "    \n",
+    "    y_true_mean = np.mean(y_true)\n",
+    "    numerator = np.sum(np.square(y_pred - y_true))\n",
+    "    denominator = np.sum(np.square(np.abs(y_pred - y_true_mean) + np.abs(y_true - y_true_mean)))\n",
+    "    \n",
+    "    ioa = 1 - (numerator / denominator)\n",
+    "    \n",
+    "    return ioa\n",
+    "\n",
+    "ioa = index_of_agreement(y_test, predicted_counts)\n",
+    "print(f\"Index of Agreement: {ioa:.2f}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "52a5c585",
    "metadata": {},
@@ -600,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "1c5b62be",
    "metadata": {},
    "outputs": [],
@@ -611,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "0afac396",
    "metadata": {},
    "outputs": [
@@ -672,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "36a84d36",
    "metadata": {},
    "outputs": [
@@ -722,6 +781,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "3e8bd9f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index of Agreement: 0.67\n"
+     ]
+    }
+   ],
+   "source": [
+    "def index_of_agreement(y_true, y_pred):\n",
+    "    y_true = np.array(y_true)\n",
+    "    y_pred = np.array(y_pred)\n",
+    "    \n",
+    "    assert y_true.shape == y_pred.shape, \"Input arrays must have the same shape.\"\n",
+    "    \n",
+    "    y_true_mean = np.mean(y_true)\n",
+    "    numerator = np.sum(np.square(y_pred - y_true))\n",
+    "    denominator = np.sum(np.square(np.abs(y_pred - y_true_mean) + np.abs(y_true - y_true_mean)))\n",
+    "    \n",
+    "    ioa = 1 - (numerator / denominator)\n",
+    "    \n",
+    "    return ioa\n",
+    "\n",
+    "ioa = index_of_agreement(y_test, predicted_counts)\n",
+    "print(f\"Index of Agreement: {ioa:.2f}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3015779c",
    "metadata": {},
@@ -731,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "0d31619b",
    "metadata": {},
    "outputs": [],
@@ -742,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "74a0b2f7",
    "metadata": {},
    "outputs": [
@@ -803,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "5779e8e9",
    "metadata": {},
    "outputs": [
@@ -850,6 +942,39 @@
     "print(\"RMSE:\", rmse)\n",
     "print(\"MAE:\", mae)\n",
     "print(\"R^2:\", r_squared)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "9f475519",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index of Agreement: 0.72\n"
+     ]
+    }
+   ],
+   "source": [
+    "def index_of_agreement(y_true, y_pred):\n",
+    "    y_true = np.array(y_true)\n",
+    "    y_pred = np.array(y_pred)\n",
+    "    \n",
+    "    assert y_true.shape == y_pred.shape, \"Input arrays must have the same shape.\"\n",
+    "    \n",
+    "    y_true_mean = np.mean(y_true)\n",
+    "    numerator = np.sum(np.square(y_pred - y_true))\n",
+    "    denominator = np.sum(np.square(np.abs(y_pred - y_true_mean) + np.abs(y_true - y_true_mean)))\n",
+    "    \n",
+    "    ioa = 1 - (numerator / denominator)\n",
+    "    \n",
+    "    return ioa\n",
+    "\n",
+    "ioa = index_of_agreement(y_test, predicted_counts)\n",
+    "print(f\"Index of Agreement: {ioa:.2f}\")"
    ]
   },
   {
