--- a/HospitalRegression/ensemble regression.ipynb
+++ b/HospitalRegression/ensemble regression.ipynb
@@ -206,7 +206,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:59:41] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:32:52] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -321,17 +321,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "f7f180ab",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.854240068964202"
+       "0.8704740289843317"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "c40ab7b6",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:59:52] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:33:05] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "54589b30",
    "metadata": {},
    "outputs": [
@@ -474,7 +474,7 @@
        "0.854240068964202"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,6 +482,39 @@
    "source": [
     "Adj_r2 = 1 - (1-r2_score(y_test, y_pred_combined)) * (len(y)-1)/(len(y)-X.shape[1]-1)\n",
     "Adj_r2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1bf6ff14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index of Agreement: 0.96\n"
+     ]
+    }
+   ],
+   "source": [
+    "def index_of_agreement(y_true, y_pred):\n",
+    "    y_true = np.array(y_true)\n",
+    "    y_pred = np.array(y_pred)\n",
+    "    \n",
+    "    assert y_true.shape == y_pred.shape, \"Input arrays must have the same shape.\"\n",
+    "    \n",
+    "    y_true_mean = np.mean(y_true)\n",
+    "    numerator = np.sum(np.square(y_pred - y_true))\n",
+    "    denominator = np.sum(np.square(np.abs(y_pred - y_true_mean) + np.abs(y_true - y_true_mean)))\n",
+    "    \n",
+    "    ioa = 1 - (numerator / denominator)\n",
+    "    \n",
+    "    return ioa\n",
+    "\n",
+    "ioa = index_of_agreement(y_test, y_pred_combined)\n",
+    "print(f\"Index of Agreement: {ioa:.2f}\")"
    ]
   },
   {
@@ -494,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "7ced2968",
    "metadata": {},
    "outputs": [],
@@ -504,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "b48cc870",
    "metadata": {},
    "outputs": [],
@@ -514,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "4c25f3e1",
    "metadata": {},
    "outputs": [
@@ -522,7 +555,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [19:00:22] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:33:31] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -604,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "06758d76",
    "metadata": {},
    "outputs": [
@@ -637,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "c20f4b69",
    "metadata": {},
    "outputs": [
@@ -645,7 +678,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [19:00:30] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:33:35] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -722,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "f9045d34",
    "metadata": {},
    "outputs": [
@@ -732,7 +765,7 @@
        "0.6098479992713175"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,6 +773,39 @@
    "source": [
     "Adj_r2 = 1 - (1-r2_score(y_test, y_pred_combined)) * (len(y)-1)/(len(y)-X.shape[1]-1)\n",
     "Adj_r2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ead08156",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index of Agreement: 0.86\n"
+     ]
+    }
+   ],
+   "source": [
+    "def index_of_agreement(y_true, y_pred):\n",
+    "    y_true = np.array(y_true)\n",
+    "    y_pred = np.array(y_pred)\n",
+    "    \n",
+    "    assert y_true.shape == y_pred.shape, \"Input arrays must have the same shape.\"\n",
+    "    \n",
+    "    y_true_mean = np.mean(y_true)\n",
+    "    numerator = np.sum(np.square(y_pred - y_true))\n",
+    "    denominator = np.sum(np.square(np.abs(y_pred - y_true_mean) + np.abs(y_true - y_true_mean)))\n",
+    "    \n",
+    "    ioa = 1 - (numerator / denominator)\n",
+    "    \n",
+    "    return ioa\n",
+    "\n",
+    "ioa = index_of_agreement(y_test, y_pred_combined)\n",
+    "print(f\"Index of Agreement: {ioa:.2f}\")"
    ]
   },
   {
@@ -752,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "bda757b4",
    "metadata": {},
    "outputs": [],
@@ -763,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "eb3ac874",
    "metadata": {},
    "outputs": [
@@ -771,7 +837,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [19:00:42] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:33:48] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -853,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "da70f0eb",
    "metadata": {},
    "outputs": [
@@ -886,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "88a6549b",
    "metadata": {},
    "outputs": [
@@ -894,7 +960,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [19:00:49] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:33:53] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -971,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "51f07739",
    "metadata": {},
    "outputs": [
@@ -981,7 +1047,7 @@
        "0.8704010199679623"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,6 +1055,39 @@
    "source": [
     "Adj_r2 = 1 - (1-r2_score(y_test, y_pred_combined)) * (len(y)-1)/(len(y)-X.shape[1]-1)\n",
     "Adj_r2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "1aa150ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index of Agreement: 0.96\n"
+     ]
+    }
+   ],
+   "source": [
+    "def index_of_agreement(y_true, y_pred):\n",
+    "    y_true = np.array(y_true)\n",
+    "    y_pred = np.array(y_pred)\n",
+    "    \n",
+    "    assert y_true.shape == y_pred.shape, \"Input arrays must have the same shape.\"\n",
+    "    \n",
+    "    y_true_mean = np.mean(y_true)\n",
+    "    numerator = np.sum(np.square(y_pred - y_true))\n",
+    "    denominator = np.sum(np.square(np.abs(y_pred - y_true_mean) + np.abs(y_true - y_true_mean)))\n",
+    "    \n",
+    "    ioa = 1 - (numerator / denominator)\n",
+    "    \n",
+    "    return ioa\n",
+    "\n",
+    "ioa = index_of_agreement(y_test, y_pred_combined)\n",
+    "print(f\"Index of Agreement: {ioa:.2f}\")"
    ]
   },
   {
@@ -1001,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "id": "7a2a6892",
    "metadata": {},
    "outputs": [],
@@ -1012,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "5c391787",
    "metadata": {},
    "outputs": [
@@ -1020,7 +1119,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [19:01:13] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:34:11] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -1102,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "a6842b25",
    "metadata": {},
    "outputs": [
@@ -1135,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "id": "206e8281",
    "metadata": {},
    "outputs": [
@@ -1143,7 +1242,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [19:01:18] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:34:14] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -1220,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "id": "ab96e477",
    "metadata": {},
    "outputs": [
@@ -1230,7 +1329,7 @@
        "0.6893688989605973"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1238,6 +1337,39 @@
    "source": [
     "Adj_r2 = 1 - (1-r2_score(y_test, y_pred_combined)) * (len(y)-1)/(len(y)-X.shape[1]-1)\n",
     "Adj_r2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "6e387085",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index of Agreement: 0.90\n"
+     ]
+    }
+   ],
+   "source": [
+    "def index_of_agreement(y_true, y_pred):\n",
+    "    y_true = np.array(y_true)\n",
+    "    y_pred = np.array(y_pred)\n",
+    "    \n",
+    "    assert y_true.shape == y_pred.shape, \"Input arrays must have the same shape.\"\n",
+    "    \n",
+    "    y_true_mean = np.mean(y_true)\n",
+    "    numerator = np.sum(np.square(y_pred - y_true))\n",
+    "    denominator = np.sum(np.square(np.abs(y_pred - y_true_mean) + np.abs(y_true - y_true_mean)))\n",
+    "    \n",
+    "    ioa = 1 - (numerator / denominator)\n",
+    "    \n",
+    "    return ioa\n",
+    "\n",
+    "ioa = index_of_agreement(y_test, y_pred_combined)\n",
+    "print(f\"Index of Agreement: {ioa:.2f}\")"
    ]
   },
   {
@@ -1250,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "id": "828d6192",
    "metadata": {},
    "outputs": [],
@@ -1261,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "id": "0d2da6e1",
    "metadata": {},
    "outputs": [
@@ -1269,7 +1401,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [19:01:26] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:34:34] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -1351,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "id": "e9df0376",
    "metadata": {},
    "outputs": [
@@ -1384,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "id": "6e5278a0",
    "metadata": {},
    "outputs": [
@@ -1392,7 +1524,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [19:01:32] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:34:39] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -1469,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "0a45dc2d",
    "metadata": {},
    "outputs": [
@@ -1479,7 +1611,7 @@
        "0.7432072619636481"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1487,6 +1619,39 @@
    "source": [
     "Adj_r2 = 1 - (1-r2_score(y_test, y_pred_combined)) * (len(y)-1)/(len(y)-X.shape[1]-1)\n",
     "Adj_r2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "06d8cfe7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index of Agreement: 0.92\n"
+     ]
+    }
+   ],
+   "source": [
+    "def index_of_agreement(y_true, y_pred):\n",
+    "    y_true = np.array(y_true)\n",
+    "    y_pred = np.array(y_pred)\n",
+    "    \n",
+    "    assert y_true.shape == y_pred.shape, \"Input arrays must have the same shape.\"\n",
+    "    \n",
+    "    y_true_mean = np.mean(y_true)\n",
+    "    numerator = np.sum(np.square(y_pred - y_true))\n",
+    "    denominator = np.sum(np.square(np.abs(y_pred - y_true_mean) + np.abs(y_true - y_true_mean)))\n",
+    "    \n",
+    "    ioa = 1 - (numerator / denominator)\n",
+    "    \n",
+    "    return ioa\n",
+    "\n",
+    "ioa = index_of_agreement(y_test, y_pred_combined)\n",
+    "print(f\"Index of Agreement: {ioa:.2f}\")"
    ]
   },
   {
