--- a/severityregression/ensemble regressionvsever.ipynb
+++ b/severityregression/ensemble regressionvsever.ipynb
@@ -206,7 +206,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [00:08:42] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:48:07] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -388,7 +388,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [00:09:09] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:48:21] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -485,6 +485,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5c358ba7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index of Agreement: 0.96\n"
+     ]
+    }
+   ],
+   "source": [
+    "def index_of_agreement(y_true, y_pred):\n",
+    "    y_true = np.array(y_true)\n",
+    "    y_pred = np.array(y_pred)\n",
+    "    \n",
+    "    assert y_true.shape == y_pred.shape, \"Input arrays must have the same shape.\"\n",
+    "    \n",
+    "    y_true_mean = np.mean(y_true)\n",
+    "    numerator = np.sum(np.square(y_pred - y_true))\n",
+    "    denominator = np.sum(np.square(np.abs(y_pred - y_true_mean) + np.abs(y_true - y_true_mean)))\n",
+    "    \n",
+    "    ioa = 1 - (numerator / denominator)\n",
+    "    \n",
+    "    return ioa\n",
+    "\n",
+    "ioa = index_of_agreement(y_test, y_pred_combined)\n",
+    "print(f\"Index of Agreement: {ioa:.2f}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4826f818",
    "metadata": {},
@@ -494,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "7ced2968",
    "metadata": {},
    "outputs": [],
@@ -504,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "b48cc870",
    "metadata": {},
    "outputs": [],
@@ -514,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "4c25f3e1",
    "metadata": {},
    "outputs": [
@@ -522,7 +555,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [00:09:27] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:48:44] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -604,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "06758d76",
    "metadata": {},
    "outputs": [
@@ -637,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "c20f4b69",
    "metadata": {},
    "outputs": [
@@ -645,7 +678,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [00:09:38] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:48:49] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -722,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "f9045d34",
    "metadata": {},
    "outputs": [
@@ -732,7 +765,7 @@
        "0.5982467597661766"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,6 +773,39 @@
    "source": [
     "Adj_r2 = 1 - (1-r2_score(y_test, y_pred_combined)) * (len(y)-1)/(len(y)-X.shape[1]-1)\n",
     "Adj_r2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e7ae8a85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index of Agreement: 0.86\n"
+     ]
+    }
+   ],
+   "source": [
+    "def index_of_agreement(y_true, y_pred):\n",
+    "    y_true = np.array(y_true)\n",
+    "    y_pred = np.array(y_pred)\n",
+    "    \n",
+    "    assert y_true.shape == y_pred.shape, \"Input arrays must have the same shape.\"\n",
+    "    \n",
+    "    y_true_mean = np.mean(y_true)\n",
+    "    numerator = np.sum(np.square(y_pred - y_true))\n",
+    "    denominator = np.sum(np.square(np.abs(y_pred - y_true_mean) + np.abs(y_true - y_true_mean)))\n",
+    "    \n",
+    "    ioa = 1 - (numerator / denominator)\n",
+    "    \n",
+    "    return ioa\n",
+    "\n",
+    "ioa = index_of_agreement(y_test, y_pred_combined)\n",
+    "print(f\"Index of Agreement: {ioa:.2f}\")"
    ]
   },
   {
@@ -752,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "bda757b4",
    "metadata": {},
    "outputs": [],
@@ -763,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "eb3ac874",
    "metadata": {},
    "outputs": [
@@ -771,7 +837,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [00:09:54] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:49:12] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -853,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "da70f0eb",
    "metadata": {},
    "outputs": [
@@ -886,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "88a6549b",
    "metadata": {},
    "outputs": [
@@ -894,7 +960,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [00:10:07] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:49:17] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -971,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "51f07739",
    "metadata": {},
    "outputs": [
@@ -981,7 +1047,7 @@
        "0.8660150828470317"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,6 +1055,39 @@
    "source": [
     "Adj_r2 = 1 - (1-r2_score(y_test, y_pred_combined)) * (len(y)-1)/(len(y)-X.shape[1]-1)\n",
     "Adj_r2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "1b90c631",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index of Agreement: 0.96\n"
+     ]
+    }
+   ],
+   "source": [
+    "def index_of_agreement(y_true, y_pred):\n",
+    "    y_true = np.array(y_true)\n",
+    "    y_pred = np.array(y_pred)\n",
+    "    \n",
+    "    assert y_true.shape == y_pred.shape, \"Input arrays must have the same shape.\"\n",
+    "    \n",
+    "    y_true_mean = np.mean(y_true)\n",
+    "    numerator = np.sum(np.square(y_pred - y_true))\n",
+    "    denominator = np.sum(np.square(np.abs(y_pred - y_true_mean) + np.abs(y_true - y_true_mean)))\n",
+    "    \n",
+    "    ioa = 1 - (numerator / denominator)\n",
+    "    \n",
+    "    return ioa\n",
+    "\n",
+    "ioa = index_of_agreement(y_test, y_pred_combined)\n",
+    "print(f\"Index of Agreement: {ioa:.2f}\")"
    ]
   },
   {
@@ -1001,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "7a2a6892",
    "metadata": {},
    "outputs": [],
@@ -1012,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "5c391787",
    "metadata": {},
    "outputs": [
@@ -1020,7 +1119,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [00:10:22] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:49:30] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -1102,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "a6842b25",
    "metadata": {},
    "outputs": [
@@ -1135,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "206e8281",
    "metadata": {},
    "outputs": [
@@ -1143,7 +1242,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [00:10:30] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:49:35] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -1220,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "ab96e477",
    "metadata": {},
    "outputs": [
@@ -1230,7 +1329,7 @@
        "0.6912612436050909"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1238,6 +1337,39 @@
    "source": [
     "Adj_r2 = 1 - (1-r2_score(y_test, y_pred_combined)) * (len(y)-1)/(len(y)-X.shape[1]-1)\n",
     "Adj_r2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "d5c8f46e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index of Agreement: 0.90\n"
+     ]
+    }
+   ],
+   "source": [
+    "def index_of_agreement(y_true, y_pred):\n",
+    "    y_true = np.array(y_true)\n",
+    "    y_pred = np.array(y_pred)\n",
+    "    \n",
+    "    assert y_true.shape == y_pred.shape, \"Input arrays must have the same shape.\"\n",
+    "    \n",
+    "    y_true_mean = np.mean(y_true)\n",
+    "    numerator = np.sum(np.square(y_pred - y_true))\n",
+    "    denominator = np.sum(np.square(np.abs(y_pred - y_true_mean) + np.abs(y_true - y_true_mean)))\n",
+    "    \n",
+    "    ioa = 1 - (numerator / denominator)\n",
+    "    \n",
+    "    return ioa\n",
+    "\n",
+    "ioa = index_of_agreement(y_test, y_pred_combined)\n",
+    "print(f\"Index of Agreement: {ioa:.2f}\")"
    ]
   },
   {
@@ -1250,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "id": "828d6192",
    "metadata": {},
    "outputs": [],
@@ -1261,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "id": "0d2da6e1",
    "metadata": {},
    "outputs": [
@@ -1269,7 +1401,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [00:10:44] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:49:48] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -1351,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "id": "e9df0376",
    "metadata": {},
    "outputs": [
@@ -1384,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "id": "6e5278a0",
    "metadata": {},
    "outputs": [
@@ -1392,7 +1524,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [00:10:51] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:49:54] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -1469,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "id": "0a45dc2d",
    "metadata": {},
    "outputs": [
@@ -1479,7 +1611,7 @@
        "0.7399977435910935"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1487,6 +1619,39 @@
    "source": [
     "Adj_r2 = 1 - (1-r2_score(y_test, y_pred_combined)) * (len(y)-1)/(len(y)-X.shape[1]-1)\n",
     "Adj_r2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "d4fac227",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index of Agreement: 0.92\n"
+     ]
+    }
+   ],
+   "source": [
+    "def index_of_agreement(y_true, y_pred):\n",
+    "    y_true = np.array(y_true)\n",
+    "    y_pred = np.array(y_pred)\n",
+    "    \n",
+    "    assert y_true.shape == y_pred.shape, \"Input arrays must have the same shape.\"\n",
+    "    \n",
+    "    y_true_mean = np.mean(y_true)\n",
+    "    numerator = np.sum(np.square(y_pred - y_true))\n",
+    "    denominator = np.sum(np.square(np.abs(y_pred - y_true_mean) + np.abs(y_true - y_true_mean)))\n",
+    "    \n",
+    "    ioa = 1 - (numerator / denominator)\n",
+    "    \n",
+    "    return ioa\n",
+    "\n",
+    "ioa = index_of_agreement(y_test, y_pred_combined)\n",
+    "print(f\"Index of Agreement: {ioa:.2f}\")"
    ]
   },
   {
