--- a/severityregression/Xgboost poison regression sever.ipynb
+++ b/severityregression/Xgboost poison regression sever.ipynb
@@ -341,7 +341,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [15:26:48] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:40:41] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -410,6 +410,39 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "71e7f72b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index of Agreement: 0.96\n"
+     ]
+    }
+   ],
+   "source": [
+    "def index_of_agreement(y_true, y_pred):\n",
+    "    y_true = np.array(y_true)\n",
+    "    y_pred = np.array(y_pred)\n",
+    "    \n",
+    "    assert y_true.shape == y_pred.shape, \"Input arrays must have the same shape.\"\n",
+    "    \n",
+    "    y_true_mean = np.mean(y_true)\n",
+    "    numerator = np.sum(np.square(y_pred - y_true))\n",
+    "    denominator = np.sum(np.square(np.abs(y_pred - y_true_mean) + np.abs(y_true - y_true_mean)))\n",
+    "    \n",
+    "    ioa = 1 - (numerator / denominator)\n",
+    "    \n",
+    "    return ioa\n",
+    "\n",
+    "ioa = index_of_agreement(y_test, predicted_counts)\n",
+    "print(f\"Index of Agreement: {ioa:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "5c7a4a2a",
    "metadata": {},
    "outputs": [
@@ -474,7 +507,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [00:17:04] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:41:03] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -615,7 +648,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [00:17:16] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:41:09] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -679,6 +712,39 @@
     "cv = rmse / y.mean()\n",
     "\n",
     "print(f\"Coefficient of Variation (CV): {cv:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1ad45403",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index of Agreement: 0.86\n"
+     ]
+    }
+   ],
+   "source": [
+    "def index_of_agreement(y_true, y_pred):\n",
+    "    y_true = np.array(y_true)\n",
+    "    y_pred = np.array(y_pred)\n",
+    "    \n",
+    "    assert y_true.shape == y_pred.shape, \"Input arrays must have the same shape.\"\n",
+    "    \n",
+    "    y_true_mean = np.mean(y_true)\n",
+    "    numerator = np.sum(np.square(y_pred - y_true))\n",
+    "    denominator = np.sum(np.square(np.abs(y_pred - y_true_mean) + np.abs(y_true - y_true_mean)))\n",
+    "    \n",
+    "    ioa = 1 - (numerator / denominator)\n",
+    "    \n",
+    "    return ioa\n",
+    "\n",
+    "ioa = index_of_agreement(y_test, predicted_counts)\n",
+    "print(f\"Index of Agreement: {ioa:.2f}\")"
    ]
   },
   {
@@ -813,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "30222881",
    "metadata": {},
    "outputs": [
@@ -821,7 +887,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [00:20:01] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:41:33] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -885,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "9a8d99ab",
    "metadata": {},
    "outputs": [
@@ -918,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "91b1253e",
    "metadata": {},
    "outputs": [
@@ -955,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "af4d41c8",
    "metadata": {},
    "outputs": [
@@ -963,7 +1029,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [00:20:11] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:41:43] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -1027,6 +1093,39 @@
     "cv = rmse / y.mean()\n",
     "\n",
     "print(f\"Coefficient of Variation (CV): {cv:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "cea073da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index of Agreement: 0.96\n"
+     ]
+    }
+   ],
+   "source": [
+    "def index_of_agreement(y_true, y_pred):\n",
+    "    y_true = np.array(y_true)\n",
+    "    y_pred = np.array(y_pred)\n",
+    "    \n",
+    "    assert y_true.shape == y_pred.shape, \"Input arrays must have the same shape.\"\n",
+    "    \n",
+    "    y_true_mean = np.mean(y_true)\n",
+    "    numerator = np.sum(np.square(y_pred - y_true))\n",
+    "    denominator = np.sum(np.square(np.abs(y_pred - y_true_mean) + np.abs(y_true - y_true_mean)))\n",
+    "    \n",
+    "    ioa = 1 - (numerator / denominator)\n",
+    "    \n",
+    "    return ioa\n",
+    "\n",
+    "ioa = index_of_agreement(y_test, predicted_counts)\n",
+    "print(f\"Index of Agreement: {ioa:.2f}\")"
    ]
   },
   {
@@ -1095,7 +1194,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [00:20:53] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
+      "/Users/amin/opt/anaconda3/lib/python3.9/site-packages/xgboost/core.py:160: UserWarning: [18:42:15] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
